--- a/hsautojmp.cabal
+++ b/hsautojmp.cabal
@@ -16,6 +16,7 @@ Build-type:          Simple
 Cabal-version:       >=1.2
 
 Executable hsautojmp
+  hs-source-dirs:       src
   Main-is: HsAutojump.hs
   
   -- Packages needed in order to build this package.
