--- a/hsautojmp.cabal
+++ b/hsautojmp.cabal
@@ -22,14 +22,14 @@ Executable hsautojmp
   -- Packages needed in order to build this package.
   Build-depends: haskell98 == 1.*, 
                  directory == 1.*, 
-                 pcre-light == 0.3.*, 
                  utf8-string == 0.3.*, 
                  base == 4.2.*, 
                  binary == 0.5.*, 
                  bytestring == 0.9.*,
                  bytestring-trie == 0.2.*,
                  unix == 2.4.*,
-                 cautious-file == 0.1.*
+                 cautious-file == 0.1.*,
+                 pcre-light-extra
 
 
   ghc-options: -O2 -fvia-C -optc -O3
